# tvm-relax-cpp-example

./: CMakeLists.txt  build_cross.sh  export_nvcc.py  export_relax_library.py  export_relax_library_crosscompile.py  export_relax_library_crosscompile_01.py  export_relax_library_crosscompile_final.py  export_relax_library_crosscompile_final_success.py  main.cc  main_resnet50.cc  toolchain-aarch64-thor_rev01.cmake
